methods.picture.PatternPicture.scala.error
Erreur de compilation :
PatternPicture:18: error: not found: value bloc
  bloc();droite();droite();avance();avance()
  ^