methods.picture.PatternPicture.scala.code
override def run() {
  
}


def motif(){
  avance();baisseBrosse();leveBrosse();gauche();avance();gauche();avance();droite();baisseBrosse();leveBrosse();
}

def motif2(){
  avance();baisseBrosse();leveBrosse();avance();droite();avance();baisseBrosse();leveBrosse();
}
def Bloc(){
  setCouleurBrosse(Color.RED);motif();setCouleurBrosse(Color.YELLOW);motif2();setCouleurBrosse(Color.GREEN);motif2();setCouleurBrosse(Color.BLUE);motif2();
}

def ligne(){
  bloc();droite();droite();avance();avance()
}